[package]
name = "rts-empire-bevy"
version = "0.1.0"
edition = "2021"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.2"
rand = "0.8.5"
bevy_asset_loader = "0.20.0"
bevy-inspector-egui = "0.24.0"
bevy_panorbit_camera = "0.17"
noise = { version = "0.9.0", features = ["image"] }
