[package]
name = "lethal_empire_bevy"
version = "0.2.0"
edition = "2021"

[lib]
name = "lethal_empire_bevy"
path = "src/lib.rs"

[[bin]]
name = "lethal_empire_bevy"
path = "src/main.rs"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.2"
rand = "0.8.5"
bevy_asset_loader = "0.20.0"
bevy-inspector-egui = "0.24.0"
bevy_panorbit_camera = "0.17"
noise = "0.9.0"
itertools = "0.12.1"
bytemuck = "1.15.0"

[features]
default = []
debug = []
